design fixes - header alignment and trashed notes back icon

--- a/test_apps/evernote/style/common.css
+++ b/test_apps/evernote/style/common.css
@@ -25,7 +25,7 @@ body {
     right: 0;
     z-index: 50;
     height: 48px;
-    line-height: 48px;
+    line-height: 46px;
     color: #fff;
     padding: 0 56px 0 41px;
     background: #c4582b;
@@ -47,11 +47,11 @@ body {
         left: 0;
         font-size: 22px;
         width: 100%;
-        height: 48px;
+        height: 46px;
         background: transparent;
         border: none;
         color: #fff;
-        padding: 0 56px 0 31px;
+        padding: 0 56px 0 40px;
         -moz-box-sizing: border-box;
         -webkit-box-sizing: border-box;
         box-sizing: border-box;
@@ -523,6 +523,12 @@ body {
     width: 17px;
     height: 17px;
     margin: -8.5px 0 0 -9px;
+}
+.readonly #button-note-cancel:before {
+    background-position: -280px -40px;
+    width: 11px;
+    height: 17px;
+    margin: -8px 0 0 -5px;
 }
 #button-notebook-search:before {
     background-position: -160px 0;
